objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Autonumber_2__c</fullName>
        <displayFormat>AA2-{0000000}</displayFormat>
        <label>Account Autonumber 2</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Account_Autonumber__c</fullName>
        <displayFormat>AA-{000000}</displayFormat>
        <label>Account Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Autonumber_2__c</fullName>
        <displayFormat>AA-{00000}</displayFormat>
        <label>Autonumber 2</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Autonumber__c</fullName>
        <displayFormat>A-{0000000}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>SAP_Account__c</fullName>
        <externalId>true</externalId>
        <label>SAP Account #</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>